# codotaku-gltf

./: .gitignore  Cargo.toml  build.rs
shaders/: shader.wgsl
src/: main.rs  shader.wgsl
