[package]
name = "codotaku-gltf"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
bytemuck = "1.25.1"
encase = "0.12.0"
exr = "1.74.2"
glamx = { version = "0.3.0", features = ["bytemuck"] }
gltf = "1.4.1"
ktx2 = "0.5.0"
offset-allocator = "0.2.0"
palette = "0.7.6"
pollster = "1.0.1"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
wgpu = "30.0.0"
winit = "0.30.13"
